--- a/pacrfrontend/app/globals.css
+++ b/pacrfrontend/app/globals.css
@@ -1,5 +1,9 @@
+@import url('https://fonts.cdnfonts.com/css/open-sauce-one');
+
 *{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: 'Open Sauce One';
 }
+
